sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/sanergy_sopo_tracker__c.object-meta.xml
<CustomObject>
    <description>Tracks the status of a sales order with regards to the creation of the purchase order</description>
    <label>Sales Purchase Order Creation Status</label>
    <nameField>
        <displayFormat>SOPO-{00000000}</displayFormat>
        <label>SalesPurchaseOrderName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Purchase Orders Creation Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>