sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/FLIK_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FLIK_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLIK Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status (FLIK Opportunity)</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>