sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/FLIK_Sales_Order_Header__c.field-meta.xml
<CustomField>
    <fullName>FLIK_Sales_Order_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLIK Sales Order Header</label>
    <referenceTo>rstk__sohdr__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status (FLIK Sales Order Header)</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>