sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/FLIK_Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>FLIK_Sales_Order_Status__c</fullName>
    <formula>BLANKVALUE(FLIK_Sales_Order_Header__r.rstk__sohdr_ordsts__c, &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLIK Sales Order Status</label>
    <type>Text</type>
</CustomField>