sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/FLIK_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>FLIK_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLIK Work Order</label>
    <referenceTo>rstk__wocst__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>