sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/Purchase_Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FLIK Purchase Order Header</label>
    <referenceTo>rstk__pohdr__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>