sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FLIK Sales Order Line</label>
    <referenceTo>rstk__soline__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>