sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SLK_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>