sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>SLK_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Sales Order</label>
    <referenceTo>rstk__sohdr__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status</relationshipName>
    <type>Lookup</type>
</CustomField>