sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>SLK_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Sales Order Line</label>
    <referenceTo>rstk__soline__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status (SLK Sales Order Line)</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>