sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>SLK_Sales_Order_Status__c</fullName>
    <formula>BLANKVALUE(SLK_Sales_Order__r.rstk__sohdr_ordsts__c, &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLK Sales Order Status</label>
    <type>Text</type>
</CustomField>