sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SLK_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLK Work Order</label>
    <referenceTo>rstk__wocst__c</referenceTo>
    <relationshipLabel>Sales Purchase Orders Creation Status (SLK Work Order)</relationshipLabel>
    <relationshipName>Sales_Purchase_Orders_Creation_Status1</relationshipName>
    <type>Lookup</type>
</CustomField>