sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/fields/SLK_Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>SLK_Work_Order_Status__c</fullName>
    <formula>TEXT(SLK_Work_Order__r.rstk__wocst_ordsts_pl__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLK Work Order Status</label>
    <type>Text</type>
</CustomField>