sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Firm__c</columns>
    <columns>Purchase_Order_Header__c</columns>
    <columns>Sales_Order_Line__c</columns>
    <columns>SLK_Opportunity__c</columns>
    <columns>SLK_Sales_Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>