sfSandBoxCode/force-app/main/default/objects/sanergy_sopo_tracker__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>FLIK_Opportunity__c</columns>
    <columns>FLIK_Sales_Order_Header__c</columns>
    <columns>Sales_Order_Line__c</columns>
    <columns>Purchase_Order_Header__c</columns>
    <columns>SLK_Opportunity__c</columns>
    <columns>SLK_Sales_Order__c</columns>
    <columns>SLK_Sales_Order_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>